<resources>
    <string name="app_name">Weight Log</string>


    <!-- Category names -->
    <string name="category_chest">chest</string>
    <string name="category_back">back</string>
    <string name="category_arms">arms</string>
    <string name="category_legs">legs</string>

    <!-- Menu Item Names -->
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_reset">Reset</string>
    <string name="menu_item_add_exercise">Add Exercise</string>

    <!-- Text for list Items -->
    <string name="item_current_weight_kg">%1$s kg</string>
    <string name="item_current_weight_lb">%1$s lb</string>
    <string name="item_warning_message">No change in %1$d days...</string>

    <!-- Text for dialog boxes -->
    <string name="edit_weight_enter_new">Enter new weight</string>
    <string name="edit_weight_units_kg">kg</string>
    <string name="edit_weight_units_lb">lb</string>
    <string name="new_exercise_hint">Enter Name...</string>
    <string name="new_exercise_header_name">Name</string>
    <string name="new_exercise_header_category">Category</string>
    <string name="new_exercise_header_weight">Weight</string>


    <!-- Units -->
    <string name="units_kilograms">kg</string>
    <string name="units_pounds">lb</string>

    <!-- Preference Strings -->
    <string name="pref_sort_order_default" translatable="false">alphabetical</string>
    <string name="pref_sort_order_key" translatable="false">pref_sort_order</string>

    <string name="pref_unit_default" translatable="false">kg</string>
    <string name="pref_units_key" translatable="false">pref_units</string>

    <string name="pref_show_days_since_increase_key" translatable="false">pref_display_additional_info</string>
    <string name="pref_show_days_since_increase_default" translatable="false">true</string>

    <string name="pref_days_before_warning_key" translatable="false">pref_max_days_before_warning</string>
    <string name="pref_days_before_warning_default" translatable="false">5</string>

    <!-- ContentDescription Text for Images -->
    <string name="cont_description_delete_icon">Delete Exercise</string>

    <!-- Hint Text -->
    <string name="hint_weight">0.0</string>

    <!-- Empty listView message -->
    <string name="empty_list_message_1">Empty!</string>
    <string name="empty_list_message_2">Tap + to Add Items</string>
</resources>
