<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_sort_order_key"
        android:title="Sort Order"
        android:entries="@array/pref_sort_order_entries"
        android:entryValues="@array/pref_sort_order_pref_values"
        android:defaultValue="@string/pref_sort_order_default"
        android:summary="%s">
    </ListPreference>

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="Units"
        android:entries="@array/pref_units_entries"
        android:entryValues="@array/pref_units_values"
        android:defaultValue="@string/pref_unit_default"
        android:summary="%s">
    </ListPreference>


    <CheckBoxPreference
        android:key="@string/pref_show_days_since_increase_key"
        android:title="Show Overdue Weight Increases"
        android:theme="@style/PrefCheckBoxColour"
        android:defaultValue="true">
    </CheckBoxPreference>

    <EditTextPreference
        android:key="@string/pref_days_before_warning_key"
        android:title="Max Days Before Moving up a Weight"
        android:defaultValue="@string/pref_days_before_warning_default"
        android:singleLine="true"
        android:summary=""
        android:inputType="number"
        android:dependency="@string/pref_show_days_since_increase_key"
        >

    </EditTextPreference>

</PreferenceScreen>