<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_exercise_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorDialog"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="New Exercise" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/new_exercise_header_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newExerciseNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/new_exercise_hint"
                android:inputType="textCapWords"
                android:maxLength="30"
                android:singleLine="true"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/new_exercise_header_category"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/newExerciseCategorySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="@string/new_exercise_header_weight"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingLeft="5dp">

                <EditText
                    android:id="@+id/startingWeightEditText"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_weight"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/units_kilograms"
                    android:id="@+id/new_exercise_weight_unit_textview"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>




</LinearLayout>