<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/colorDialog"
        tools:text="Exercise Name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:paddingLeft="25dp"
        android:gravity="center_vertical"
        android:id="@+id/edit_weight_title_text_view"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingTop="25dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-1dp"
                android:text="@string/edit_weight_enter_new"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/newWeightText"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-5dp"
                    android:hint="@string/hint_weight"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/units_kilograms"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteExerciseButton"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="78dp"
            android:contentDescription="@string/cont_description_delete_icon"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_delete_black_48dp" />


    </LinearLayout>

</LinearLayout>

